--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,8 +1,10 @@
+# Ignore env
 .env
+
+# Composer deps
 /vendor/
 
-# ignore everything inside writable (but keep placeholders)
-writable
-writable/*
-!writable/.htaccess
-!writable/index.html
+# CodeIgniter writable: ignore everything BUT keep folder structure
+/writable/*
+!/writable/.gitkeep
+!/writable/**/.gitkeep
