--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,41 +1,72 @@
 FROM php:8.2-apache
 
-# Needed for CodeIgniter (intl) + PostgreSQL
+# -----------------------------
+# System deps + PHP extensions
+# -----------------------------
 RUN apt-get update && apt-get install -y \
     git unzip libpq-dev libicu-dev \
  && docker-php-ext-install intl pdo pdo_pgsql pgsql \
  && a2enmod rewrite \
  && rm -rf /var/lib/apt/lists/*
 
-# Serve from /public
+# -----------------------------
+# Apache: serve from /public
+# -----------------------------
 ENV APACHE_DOCUMENT_ROOT=/var/www/html/public
-RUN sed -ri 's!/var/www/html!/var/www/html/public!g' /etc/apache2/sites-available/000-default.conf
+
+RUN sed -ri 's!/var/www/html!/var/www/html/public!g' /etc/apache2/sites-available/000-default.conf \
+ && sed -ri 's!/var/www/!/var/www/html/public!g' /etc/apache2/apache2.conf /etc/apache2/conf-available/*.conf || true
+
+# (Optional but helpful) Fix AllowOverride so CI routes work with .htaccess
+RUN sed -ri 's!AllowOverride None!AllowOverride All!g' /etc/apache2/apache2.conf
 
 WORKDIR /var/www/html
 
+# -----------------------------
 # Composer
+# -----------------------------
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 ENV COMPOSER_ALLOW_SUPERUSER=1
 
+# -----------------------------
 # Copy app
+# -----------------------------
 COPY . .
 
-# Ensure writable exists (prevents WRITEPATH errors)
+# -----------------------------
+# Writable permissions
+# -----------------------------
 RUN mkdir -p writable/cache writable/logs writable/session writable/uploads \
  && chown -R www-data:www-data writable \
  && chmod -R 775 writable
 
-# Install deps (creates vendor/)
+# -----------------------------
+# Install deps
+# -----------------------------
 RUN composer install --no-dev --optimize-autoloader --no-interaction
 
-# HARD CHECK: if vendor is missing, FAIL BUILD (prevents your current runtime error)
+# HARD CHECK: ensure framework exists
 RUN test -f vendor/codeigniter4/framework/system/Boot.php
 
-# Start: run migrations then apache (Render Free has no shell)
+# -----------------------------
+# Start script
+# - Optional migrations controlled by RUN_MIGRATIONS=true
+# - Never swallow errors silently
+# -----------------------------
 RUN printf '%s\n' \
 '#!/usr/bin/env sh' \
 'set -e' \
-'php spark migrate --all || true' \
+'' \
+'echo "Starting CodeIgniter on Apache..."' \
+'' \
+'# Optional: run migrations only when enabled' \
+'if [ "${RUN_MIGRATIONS:-false}" = "true" ]; then' \
+'  echo "RUN_MIGRATIONS=true -> running migrations..."' \
+'  php spark migrate --all' \
+'else' \
+'  echo "RUN_MIGRATIONS is not true -> skipping migrations."' \
+'fi' \
+'' \
 'exec apache2-foreground' \
 > /usr/local/bin/start.sh \
  && chmod +x /usr/local/bin/start.sh
